BlueToolTestforJoy/blue_dir/include/VB6/HidDfuAPI.bas

' HidDfuAPI.bas : Declares the DLL functions for vb6.
' Generated by C:\work_bluesuite_2_5\p4\common\hosttools\bluesuite_2_5\prodtest\scripts\extract_tt_api.pl from HidDfu.h;  at 03/02/14 - 11:13:42

Declare Function hidDfuGetVersion Lib "HidDfu.dll" (ByRef major As Integer, ByRef minor As Integer, ByRef release As Integer, ByRef build As Integer) As Long
Declare Function hidDfuConnect Lib "HidDfu.dll" (ByVal vid As Integer, ByVal pid As Integer, ByVal usage As Integer, ByVal usagePage As Integer) As Long
Declare Function hidDfuDisconnect Lib "HidDfu.dll" () As Long
Declare Function hidDfuBackup Lib "HidDfu.dll" (ByVal fileName As String) As Long
Declare Function hidDfuUpgrade Lib "HidDfu.dll" (ByVal fileName As String) As Long
Declare Function hidDfuResetDevice Lib "HidDfu.dll" () As Long
Declare Function hidDfuGetProgress Lib "HidDfu.dll" () As Byte
Declare Function hidDfuGetResult Lib "HidDfu.dll" () As Long
Declare Function hidDfuGetLastError Lib "HidDfu.dll" () As String
Declare Function hidDfuSendCommand Lib "HidDfu.dll" (ByRef data As Byte, ByVal length As Long) As Long
